# PI-Dogs-Django

./: README.md
api/: .gitignore  pyproject.toml
api/api/: settings.py  urls.py
api/breed/: models.py  serializers.py  urls.py
api/breed/migrations/: 0001_initial.py
api/breed/views/: get_dogs.py
