[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["marco <m_uno_p@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
cx-oracle = "^8.3.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
